--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -29,6 +30,12 @@
         </activity>
 
         <activity android:name=".ChangePassword">
+        </activity>
+
+        <activity android:name=".newImage">
+        </activity>
+
+        <activity android:name=".showImage">
         </activity>
 
         <activity android:name=".MainActivity">
